--- a/bin/gui/view/ViewAtualizaCliente.fxml
+++ b/bin/gui/view/ViewAtualizaCliente.fxml
@@ -6,22 +6,17 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="325.0" prefWidth="709.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewAtualizaClienteController">
+<AnchorPane prefHeight="325.0" prefWidth="709.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="gui.controllers.ViewAtualizaClienteController">
    <children>
       <Line endX="-105.0" endY="245.0" layoutX="479.0" layoutY="85.0" startX="-105.0" startY="-85.0" stroke="#827f7f" />
-      <TextField fx:id="txtCpfCliente" layoutX="478.0" layoutY="98.0" promptText="CPF do cliente" />
-      <Label layoutX="446.0" layoutY="102.0" text="CPF:" />
-      <TextField fx:id="txtNomeCliente" layoutX="478.0" layoutY="134.0" promptText="Nome do cliente" />
-      <Label layoutX="432.0" layoutY="138.0" text="Nome:" />
-      <TextField fx:id="txtEmailCliente" layoutX="479.0" layoutY="168.0" promptText="Email do cliente" />
-      <Label layoutX="434.0" layoutY="172.0" prefHeight="17.0" prefWidth="36.0" text="Email:" />
-      <Label layoutX="419.0" layoutY="206.0" prefHeight="17.0" prefWidth="50.0" text="Telefone:" />
-      <TextField fx:id="txtTelefoneCliente" layoutX="478.0" layoutY="202.0" promptText="Telefone do cliente" />
-      <Button fx:id="btAtualiza" layoutX="556.0" layoutY="247.0" mnemonicParsing="false" onAction="#atualizaCliente" prefHeight="25.0" prefWidth="71.0" text="Atualizar" />
-      <Label layoutX="408.0" layoutY="33.0" text="Digite os novos dados:">
+      <Button fx:id="btAtualiza" layoutX="561.0" layoutY="281.0" mnemonicParsing="false" onAction="#atualizaCliente" prefHeight="25.0" prefWidth="71.0" text="Atualizar" />
+      <Label layoutX="432.0" layoutY="32.0" text="Digite os novos dados:">
          <font>
             <Font name="System Bold" size="21.0" />
          </font>
@@ -34,5 +29,30 @@
       </TableView>
       <Button fx:id="btVoltar" layoutX="5.0" layoutY="2.0" mnemonicParsing="false" onAction="#voltaScene" prefHeight="16.0" prefWidth="62.0" text="Voltar" />
       <Line endX="-199.0" endY="145.2928924560547" layoutX="192.0" layoutY="-114.0" startX="517.0000610351562" startY="145.29290771484375" stroke="#827f7f" />
+      <GridPane layoutX="432.0" layoutY="75.0" vgap="10.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="92.0" minWidth="10.0" prefWidth="72.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="149.0" minWidth="10.0" prefWidth="128.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TextField fx:id="txtCpfCliente" promptText="CPF do cliente" GridPane.columnIndex="1" />
+            <TextField fx:id="txtNomeCliente" promptText="Nome do cliente" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtEmailCliente" promptText="Email do cliente" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="CPF:" />
+            <Label text="Nome:" GridPane.rowIndex="1" />
+            <Label prefHeight="17.0" prefWidth="36.0" text="Email:" GridPane.rowIndex="2" />
+            <TextField fx:id="txtTelefoneCliente" promptText="Telefone do cliente" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label prefHeight="17.0" prefWidth="50.0" text="Telefone:" GridPane.rowIndex="3" />
+            <TextField fx:id="txtRedeSocialCliente" promptText="Rede social cliente" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label text="Rede Social:" GridPane.rowIndex="4" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
