--- a/bin/gui/view/ViewFuncionario.fxml
+++ b/bin/gui/view/ViewFuncionario.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="600.0" maxWidth="500.0" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewFuncionarioController">
+<AnchorPane maxHeight="600.0" maxWidth="500.0" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewFuncionarioController">
    <children>
       <Label layoutX="113.0" layoutY="63.0" text="Digite os dados do novo funcionario">
          <font>
@@ -22,15 +22,15 @@
       <TableView fx:id="tvFuncionario" layoutX="9.0" layoutY="232.0" prefHeight="297.0" prefWidth="481.0">
         <columns>
           <TableColumn fx:id="colunaCpf" minWidth="0.0" prefWidth="123.0" text="CPF" />
-          <TableColumn fx:id="colunaNome" prefWidth="282.0" text="Nome" />
-            <TableColumn fx:id="colunaSelect" minWidth="9.0" prefWidth="75.0" text="Excluir?" />
+          <TableColumn fx:id="colunaNome" prefWidth="190.0" text="Nome" />
+            <TableColumn fx:id="colunaTelefone" prefWidth="102.0" text="Telefone" />
+            <TableColumn fx:id="colunaSelect" minWidth="9.0" prefWidth="65.0" text="Excluir?" />
         </columns>
       </TableView>
-      <Button fx:id="btExcluiFuncionario" layoutX="217.0" layoutY="569.0" mnemonicParsing="false" onAction="#excluirFuncionario" text="Excluir" />
       <Label layoutX="100.0" layoutY="533.0" prefHeight="16.0" prefWidth="300.0" text="Selecione os funcionários na coluna &quot;Excluir&quot; " />
       <Line endX="650.0" endY="6.0" layoutX="-150.0" layoutY="41.0" startX="150.2928466796875" startY="6.0" stroke="#827f7f" />
       <Button fx:id="btAtualizar" layoutX="406.0" layoutY="12.0" mnemonicParsing="false" onAction="#atualizaFuncionario" prefHeight="26.0" prefWidth="80.0" text="Atualizar" />
-      <GridPane layoutX="100.0" layoutY="98.0" prefHeight="100.0" prefWidth="300.0" vgap="5.0">
+      <GridPane layoutX="86.0" layoutY="98.0" prefHeight="97.0" prefWidth="314.0" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="47.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="253.0" />
@@ -38,16 +38,20 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label prefHeight="17.0" prefWidth="36.0" text="CPF:" />
             <Label text="Nome:" GridPane.rowIndex="1" />
-            <TextField fx:id="txtNomeFuncionario" prefHeight="26.0" prefWidth="188.0" promptText="Nome do Funcionário" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="txtCpfFuncionario" prefHeight="26.0" prefWidth="185.0" promptText="CPF fo funcionário" GridPane.columnIndex="1" />
-            <Button fx:id="btCriaFuncionario" mnemonicParsing="false" onAction="#onBtCriaFuncionarioAction" text="Criar" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+            <TextField fx:id="txtCpfFuncionario" prefHeight="26.0" prefWidth="185.0" promptText="CPF do funcionário" GridPane.columnIndex="1" />
+            <TextField fx:id="txtNomeFuncionario" prefHeight="26.0" prefWidth="188.0" promptText="Nome do funcionário" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtTelefoneFuncionario" promptText="Telefone funcionário" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button fx:id="btCriaFuncionario" mnemonicParsing="false" onAction="#onBtCriaFuncionarioAction" text="Criar" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+            <Label text="Telefone:" GridPane.rowIndex="2" />
          </children>
       </GridPane>
       <Label layoutX="117.0" layoutY="549.0" text="e aperte o botão abaixo para deleta-los!" />
+      <Button fx:id="btExcluiFuncionario" layoutX="217.0" layoutY="569.0" mnemonicParsing="false" onAction="#excluirFuncionario" text="Excluir" />
    </children>
 </AnchorPane>
