--- a/src/gui/view/ViewAtualizaFuncionario.fxml
+++ b/src/gui/view/ViewAtualizaFuncionario.fxml
@@ -12,23 +12,24 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="326.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewAtualizaFuncionarioController">
+<AnchorPane prefHeight="327.0" prefWidth="694.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewAtualizaFuncionarioController">
    <children>
-      <Line endX="-104.5" endY="248.0" layoutX="391.0" layoutY="78.0" startX="-104.5" startY="-79.0" stroke="#827f7f" />
-      <Label layoutX="310.0" layoutY="31.0" prefHeight="31.0" prefWidth="270.0" text="Digite os novos dados:">
+      <Line endX="-104.5" endY="248.0" layoutX="460.0" layoutY="78.0" startX="-104.5" startY="-79.0" stroke="#827f7f" />
+      <Label layoutX="385.0" layoutY="31.0" prefHeight="31.0" prefWidth="270.0" text="Digite os novos dados:">
          <font>
             <Font name="System Bold" size="21.0" />
          </font>
       </Label>
-      <TableView fx:id="tvFuncionario" layoutY="37.0" onMouseClicked="#selecionaFuncionario" prefHeight="288.0" prefWidth="286.0">
+      <TableView fx:id="tvFuncionario" layoutY="37.0" onMouseClicked="#selecionaFuncionario" prefHeight="288.0" prefWidth="354.0">
          <columns>
             <TableColumn fx:id="colunaCpf" minWidth="0.0" prefWidth="111.0" text="CPF" />
-            <TableColumn fx:id="colunaNome" prefWidth="173.00001525878906" text="Nome" />
+            <TableColumn fx:id="colunaNome" prefWidth="140.00001525878906" text="Nome" />
+            <TableColumn fx:id="colunaTelefone" prefWidth="102.99996948242188" text="Telefone" />
          </columns>
       </TableView>
-      <Line endX="-199.0" endY="145.2928924560547" layoutX="199.0" layoutY="-109.0" startX="87.0" startY="146.0" stroke="#827f7f" />
+      <Line endX="-199.0" endY="145.2928924560547" layoutX="199.0" layoutY="-109.0" startX="155.0" startY="146.0" stroke="#827f7f" />
       <Button fx:id="btVoltar" layoutX="5.0" layoutY="5.0" mnemonicParsing="false" onAction="#voltaScene" prefHeight="16.0" prefWidth="62.0" text="Voltar" />
-      <GridPane layoutX="323.0" layoutY="102.0" prefHeight="121.0" prefWidth="244.0">
+      <GridPane layoutX="398.0" layoutY="102.0" prefHeight="121.0" prefWidth="244.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="134.0" minWidth="10.0" prefWidth="55.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="235.0" minWidth="10.0" prefWidth="173.0" />
@@ -36,14 +37,17 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="BOTTOM" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <TextField fx:id="txtCpfFuncionario" prefHeight="25.0" prefWidth="158.0" promptText="CPF do funcionário" GridPane.columnIndex="1" />
             <TextField fx:id="txtNomeFuncionario" promptText="Nome do funcionário" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtTelefoneFuncionario" promptText="Telefone do funcionário" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button fx:id="btAtualiza" mnemonicParsing="false" onAction="#onAtualizaFuncionarioAction" prefHeight="26.0" prefWidth="87.0" text="Atualizar" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
             <Label text="CPF:" />
             <Label text="Nome:" GridPane.rowIndex="1" />
-            <Button fx:id="btAtualiza" mnemonicParsing="false" onAction="#onAtualizaFuncionarioAction" prefHeight="26.0" prefWidth="87.0" text="Atualizar" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+            <Label text="Telefone:" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </children>
