--- a/bin/gui/view/View.fxml
+++ b/bin/gui/view/View.fxml
@@ -151,7 +151,19 @@
                         </TableView>
                         <Line endX="-100.0" endY="193.16668701171875" layoutX="373.0" layoutY="-35.0" startX="-100.0" startY="30.0" stroke="#827f7f" />
                         <Button fx:id="btExcluir" layoutX="808.0" layoutY="124.0" mnemonicParsing="false" onAction="#onBtExcluirAgendamento" prefHeight="25.0" prefWidth="71.0" text="Excluir" />
-                        <ProgressIndicator fx:id="pb" layoutX="1053.0" layoutY="46.0" prefHeight="82.0" prefWidth="111.0" />
+                        <GridPane layoutX="1098.0" layoutY="70.0" prefHeight="79.0" prefWidth="145.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <ProgressIndicator fx:id="pb" prefHeight="42.0" prefWidth="206.0" />
+                              <Label fx:id="labelStatus" alignment="CENTER" contentDisplay="CENTER" prefHeight="61.0" prefWidth="260.0" textAlignment="CENTER" GridPane.rowIndex="1" />
+                           </children>
+                        </GridPane>
                      </children>
                   </AnchorPane>
             </content>
