--- a/src/gui/view/View.fxml
+++ b/src/gui/view/View.fxml
@@ -170,19 +170,9 @@
           </Tab>
         </tabs>
       </TabPane>
-      <MenuBar layoutX="1.0" layoutY="1.0" prefHeight="25.0" prefWidth="1377.0" style="-fx-border-bottom-color: #827f7f;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0">
+      <MenuBar layoutY="-1.0" prefHeight="25.0" prefWidth="1377.0" style="-fx-border-bottom-color: #827f7f; -fx-background-color: #363a39;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0">
         <menus>
-          <Menu mnemonicParsing="false" text="Configuração">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Editar">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" onAction="#onBtAbreSobreAction" text="Ajuda">
+          <Menu mnemonicParsing="false" onAction="#onBtAbreSobreAction" style="-fx-background-color: WHITE;" text="Ajuda">
             <items>
               <MenuItem mnemonicParsing="false" text="Sobre" />
             </items>
